--- a/rest/build.gradle
+++ b/rest/build.gradle
@@ -25,13 +25,13 @@ android {
 }
 
 dependencies {
-    api "io.reactivex.rxjava2:rxjava:2.2.10"
-    api 'io.reactivex.rxjava2:rxandroid:2.1.1'
-    api 'com.squareup.okhttp3:okhttp:3.12.2'
-    api 'com.squareup.okhttp3:logging-interceptor:3.12.2'
-    api 'com.squareup.retrofit2:retrofit:2.5.0'
-    api 'com.squareup.retrofit2:converter-gson:2.5.0'
-    api 'com.squareup.retrofit2:converter-jackson:2.5.0'
-    api 'com.squareup.retrofit2:converter-scalars:2.5.0'
-    api 'com.squareup.retrofit2:adapter-rxjava2:2.5.0'
+    compile "io.reactivex.rxjava2:rxjava:2.2.10"
+    compile 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    compile 'com.squareup.okhttp3:okhttp:3.12.2'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.12.2'
+    compile 'com.squareup.retrofit2:retrofit:2.5.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.5.0'
+    compile 'com.squareup.retrofit2:converter-jackson:2.5.0'
+    compile 'com.squareup.retrofit2:converter-scalars:2.5.0'
+    compile 'com.squareup.retrofit2:adapter-rxjava2:2.5.0'
 }
